5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1791_1595.log
== TEST (2019-05-29 14:04:02) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:20) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:35) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))


print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:06:51) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

print(round(sum(notas/size)
-- ERROR:
File "XXXX", line 5
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:23) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

print(round(sum(notas/size)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:56) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

print(round(sum(notas/size,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:00) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

print(round(sum(notas,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:25) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))


print(round(sum/size),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:40) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-b),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:32) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(d/c)-b,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:09) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:36:47) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-b,2))
-- EXECUTION TIME:
0.31796
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:45) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas[:-1])
b = min(notas[:-1])
c = size(notas[:-1])
d = sum(notas[:-1])

print(round((d/c) - b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:05) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas - b)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:49) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum((d/c),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:09) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:52) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c - b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:56) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:14) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas - b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:00) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas - b)

print(round(sum(d/c-b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:20) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:31) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:27) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d-b/c-b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:54) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:50) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas-b)
d = sum(notas-b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:53) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:26) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:13) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:09) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

j = d/c - b
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:46) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

j = sum(d/c - b)
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:07) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

j = d/c - b
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:55) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas[-b])

print(round(sum(d,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:08) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas[-b])

print(round(sum(d,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:40) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas[-1])

print(round(sum(d,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:51) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas[-1])

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:34) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size((notas)-b)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:19) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(a+c_b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:36) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(a+c-b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:50) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)-(b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:28:03) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)-(b)
d = sum(notas)

print(round(d/c),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:28:29) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)-(b)
d = sum(notas)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:29:04) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)-(b)
d = sum(notas/c)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:17) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-(b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:33) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d/c)-(b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:28) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round((d-b)/(c-b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:50) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum[-2]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:58) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum[-2]),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:32) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round(sum(d/c)),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:06) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round(d/c),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:39) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:02) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:29) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round(sum((d/c)-b),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:53) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas - b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:18) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas - b)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:59) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas[:-2])

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:19) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:33) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas[-2])

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:40:08) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:40) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round((d-b/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:10) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas - b)
d = sum(notas)

print(round(sum(d-b/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:29) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d-b/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:42:42) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas)

print(round(sum(d-b/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:21) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)-(b)
d = sum(notas)-(b)

print(round((d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:13) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas-b)
d = sum(notas-b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:57) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas-b)
d = sum(notas-b)

print(round(d/c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:17) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas-b)

print(round(d/c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:51) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas-b)

print(round(sum(d/c,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:24) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas-b)

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:57) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")))

a = max(notas)
b = min(notas)
c = size(notas)
d = sum(notas[-b])

print(round(sum(d/c),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
